<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/amazoncafelogo" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:inputType="text"
        android:hint="@string/hint_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/dark_brown"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:onClick="onClickCreateOrder"
        android:text="@string/button" />
</LinearLayout>