<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            android:text="@string/radiobutton_tea"/>

        <RadioButton
            android:id="@+id/radioButtoncoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClickChangeDrink"
            android:text="@string/radiobutton_coffee"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_choose_drink"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_milk"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkboxSugar"/>

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_sugar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@+id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@+id/checkboxLemon"/>

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_lemon"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@+id/checkboxSugar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_choose_options"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toBottomOf="@+id/checkboxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_tea"
        android:visibility="visible"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_coffee"
        android:visibility="invisible"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/flowerbuttonorder"
        android:contentDescription="@string/button_send_order"
        android:layout_margin="8dp"
        android:onClick="onClickSendOrder"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>